--- a/orders.html
+++ b/orders.html
@@ -214,7 +214,7 @@
               <th>Date</th>
               <th>Employee</th>
               <th>Customer</th>
-              <th>Bleeder</th>
+              <th>The Bleeder</th>
               <th>Double Shot</th>
               <th>Soda</th>
               <th>Fries</th>
@@ -364,7 +364,7 @@
       <td></td>
     `;
 
-    tr.children[10].appendChild(checkbox); // ✅ "Done?" column only
+    tr.children[11].appendChild(checkbox); // ✅ "Done?" column only
     tbody.appendChild(tr);
   });
 }
