--- a/home.html
+++ b/home.html
@@ -414,12 +414,11 @@ function formatDate(date) {
 
   const ingredients = {
     'burger_buns': 'Burger Buns',
-    'burger_patties': 'Burger Patties',
     'sugar': 'Sugar Packs',
     'flour': 'Flour',
     'lettuce': 'Lettuce',
     'cheese_slices': 'Cheddar Cheese Slices',
-    'ground_beef': 'Packaged Ground Beef',
+    'ground_beef': 'Ground Beef / Patties',
     'corn_syrup': 'Corn Syrup Bottles',
     'potato': 'Potato Sack'
   };
