--- a/orders.html
+++ b/orders.html
@@ -270,7 +270,7 @@
   const noBtn = modal.querySelector(".no-btn");
 
   const comboDetails = {
-    "Bleeder Box Combo": {
+    "The Bleeder Box": {
       components: [
         { name: "Burgershot Bleeder", quantity: 10 },
         { name: "Burgershot Soda", quantity: 15 }
