--- a/orders.html
+++ b/orders.html
@@ -272,8 +272,17 @@
   const comboDetails = {
     "The Bleeder Box": {
       components: [
-        { name: "Burgershot Bleeder", quantity: 10 },
-        { name: "Burgershot Soda", quantity: 15 }
+        { name: "Burgershot Bleeder", quantity: 5 },
+        { name: "Burgershot Soda", quantity: 5 },
+        { name: "Fries", quantity: 5 },
+        { name: "Rim Job", quantity: 1 }
+    ]
+    },
+    "Patty Pounder Combo": {
+      components: [
+        { name: "The Double Shot", quantity: 5 },
+        { name: "Burgershot Soda", quantity: 5 },
+        { name: "Rim Job", quantity: 1 }
       ]
     }
   };
