--- a/market.html
+++ b/market.html
@@ -243,138 +243,147 @@
     <div class="notification" id="notification"></div>
   </main>
 
-  <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-  import {
-    getFirestore,
-    doc,
-    updateDoc,
-    getDoc,
-    setDoc,
-    collection,
-    addDoc
-  } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+ <script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+import {
+  getFirestore,
+  doc,
+  getDoc,
+  setDoc,
+  collection,
+  addDoc
+} from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
-    authDomain: "burgershotorders.firebaseapp.com",
-    projectId: "burgershotorders",
-    storageBucket: "burgershotorders.appspot.com",
-    messagingSenderId: "244133569976",
-    appId: "1:244133569976:web:0dcca3439958188439db4d",
-    measurementId: "G-2X69N31D9Q"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
+  authDomain: "burgershotorders.firebaseapp.com",
+  projectId: "burgershotorders",
+  storageBucket: "burgershotorders.appspot.com",
+  messagingSenderId: "244133569976",
+  appId: "1:244133569976:web:0dcca3439958188439db4d",
+  measurementId: "G-2X69N31D9Q"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  const inventoryDocRef = doc(db, "inventory", "current");
-  const UNIT_PER_PACK = 5;
-  const notification = document.getElementById('notification');
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const inventoryDocRef = doc(db, "inventory", "current");
+const UNIT_PER_PACK = 5;
+const notification = document.getElementById('notification');
 
-  function showNotification(message, duration=3000) {
-    notification.textContent = message;
-    notification.style.display = 'block';
-    notification.style.opacity = '1';
-    if (showNotification.timeoutId) clearTimeout(showNotification.timeoutId);
-    showNotification.timeoutId = setTimeout(() => {
-      notification.style.transition = 'opacity 0.5s ease';
-      notification.style.opacity = '0';
-      notification.addEventListener('transitionend', () => {
-        notification.style.display = 'none';
-        notification.style.transition = '';
-      }, { once: true });
-    }, duration);
+function showNotification(message, duration=3000) {
+  notification.textContent = message;
+  notification.style.display = 'block';
+  notification.style.opacity = '1';
+  if (showNotification.timeoutId) clearTimeout(showNotification.timeoutId);
+  showNotification.timeoutId = setTimeout(() => {
+    notification.style.transition = 'opacity 0.5s ease';
+    notification.style.opacity = '0';
+    notification.addEventListener('transitionend', () => {
+      notification.style.display = 'none';
+      notification.style.transition = '';
+    }, { once: true });
+  }, duration);
+}
+
+async function getLiveInventory() {
+  const docSnap = await getDoc(inventoryDocRef);
+  return docSnap.exists() ? docSnap.data() : {};
+}
+
+async function updateInventoryInFirestore(inventory) {
+  try {
+    await setDoc(inventoryDocRef, inventory, { merge: true }); // ✅ merge instead of overwrite
+    showNotification("Inventory updated.");
+  } catch (error) {
+    console.error("Firestore update failed:", error);
+    showNotification("Failed to update inventory.");
   }
+}
 
-  async function getLiveInventory() {
-    const docSnap = await getDoc(inventoryDocRef);
-    return docSnap.exists() ? docSnap.data() : {};
-  }
+function updateCosts() {
+  const rows = document.querySelectorAll('tbody tr');
+  let total = 0;
 
-  async function updateInventoryInFirestore(updatedInventory) {
-    try {
-      const docSnap = await getDoc(inventoryDocRef);
-      if (docSnap.exists()) {
-        await updateDoc(inventoryDocRef, updatedInventory);
-      } else {
-        await setDoc(inventoryDocRef, updatedInventory);
-      }
-      showNotification("Inventory updated.");
-    } catch (error) {
-      console.error("Firestore update failed:", error);
-      showNotification("Failed to update inventory.");
-    }
-  }
+  rows.forEach(row => {
+    if (row.classList.contains("divider-row")) return; // skip section headers
 
-  function updateCosts() {
-    const rows = document.querySelectorAll('tbody tr');
-    let total = 0;
-    rows.forEach(row => {
-      const qtyInput = row.querySelector('.pack-qty');
-      const priceInput = row.querySelector('.price-per-pack');
-      const subtotalCell = row.querySelector('.subtotal');
-      const qty = parseInt(qtyInput.value) || 0;
-      const price = parseFloat(priceInput.value) || 0;
-      const subtotal = qty * price;
-      subtotalCell.textContent = '$' + subtotal.toFixed(2);
-      total += subtotal;
-    });
-    document.getElementById('totalCost').textContent = 'Total Cost: $' + total.toFixed(2);
-  }
+    const qtyInput = row.querySelector('.pack-qty');
+    const priceInput = row.querySelector('.price-per-pack');
+    const subtotalCell = row.querySelector('.subtotal');
 
-  document.getElementById('confirmPurchase').addEventListener('click', async () => {
-    const rows = document.querySelectorAll('tbody tr');
-    let inventory = await getLiveInventory();
-    let anyPurchase = false;
+    if (!qtyInput || !priceInput || !subtotalCell) return;
 
-    for (const row of rows) {
-      const qtyInput = row.querySelector('.pack-qty');
-      const ingredient = qtyInput.getAttribute('data-ingredient');
-      const qty = parseInt(qtyInput.value) || 0;
-      const price = parseFloat(row.querySelector('.price-per-pack').value) || 0;
+    const qty = parseInt(qtyInput.value) || 0;
+    const price = parseFloat(priceInput.value) || 0;
+    const subtotal = qty * price;
 
-      if (qty > 0) {
-        anyPurchase = true;
-    
-        inventory[ingredient] = (inventory[ingredient] || 0) + qty * UNIT_PER_PACK;
-
-        const run = {
-          timestamp: new Date().toISOString(),
-          ingredient: ingredient,
-          packsBought: qty,
-          pricePerPack: price
-        };
-
-        try {
-          await addDoc(collection(db, "market_runs"), run);
-          console.log(`Market run added for ${ingredient}`);
-        } catch (error) {
-          console.error("Error adding market run to Firestore:", error);
-          showNotification("Failed to save market run to server.");
-        }
-
-        qtyInput.value = 0;
-        row.querySelector('.price-per-pack').value = 0;
-        row.querySelector('.subtotal').textContent = '$0.00';
-      }
-    }
-
-    if (!anyPurchase) {
-      showNotification("Please enter quantity for at least one ingredient.");
-      return;
-    }
-
-    await updateInventoryInFirestore(inventory);
-    updateCosts();
-    showNotification("Market run saved successfully!");
+    subtotalCell.textContent = `$${subtotal.toFixed(2)}`;
+    total += subtotal;
   });
 
-  document.querySelectorAll('.pack-qty, .price-per-pack').forEach(input => {
-    input.addEventListener('input', updateCosts);
-  });
+  document.getElementById('totalCost').textContent = `Total Cost: $${total.toFixed(2)}`;
+}
 
+document.getElementById('confirmPurchase').addEventListener('click', async () => {
+  const rows = document.querySelectorAll('tbody tr');
+  let inventory = await getLiveInventory();
+  let anyPurchase = false;
+
+  for (const row of rows) {
+    if (row.classList.contains("divider-row")) continue;
+
+    const qtyInput = row.querySelector('.pack-qty');
+    const priceInput = row.querySelector('.price-per-pack');
+    const subtotalCell = row.querySelector('.subtotal');
+    if (!qtyInput) continue;
+
+    const ingredient = qtyInput.getAttribute('data-ingredient');
+    const qty = parseInt(qtyInput.value) || 0;
+    const price = parseFloat(priceInput.value) || 0;
+
+    if (qty > 0) {
+      anyPurchase = true;
+
+      // ✅ add packs * 5 units
+      inventory[ingredient] = (inventory[ingredient] || 0) + qty * UNIT_PER_PACK;
+
+      // log run
+      const run = {
+        timestamp: new Date().toISOString(),
+        ingredient,
+        packsBought: qty,
+        pricePerPack: price
+      };
+      try {
+        await addDoc(collection(db, "market_runs"), run);
+      } catch (error) {
+        console.error("Error adding market run:", error);
+      }
+
+      // reset row
+      qtyInput.value = 0;
+      priceInput.value = 0;
+      subtotalCell.textContent = "$0.00";
+    }
+  }
+
+  if (!anyPurchase) {
+    showNotification("Please enter quantity for at least one ingredient.");
+    return;
+  }
+
+  await updateInventoryInFirestore(inventory);
   updateCosts();
+  showNotification("Market run saved successfully!");
+});
+
+document.querySelectorAll('.pack-qty, .price-per-pack').forEach(input => {
+  input.addEventListener('input', updateCosts);
+});
+
+updateCosts();
 </script>
+
 
 </body>
 </html>
