--- a/loyalty.html
+++ b/loyalty.html
@@ -165,86 +165,77 @@
   </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+  import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
-      authDomain: "burgershotorders.firebaseapp.com",
-      projectId: "burgershotorders",
-      storageBucket: "burgershotorders.appspot.com",
-      messagingSenderId: "244133569976",
-      appId: "1:244133569976:web:0dcca3439958188439db4d",
-      measurementId: "G-2X69N31D9Q"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
+    authDomain: "burgershotorders.firebaseapp.com",
+    projectId: "burgershotorders",
+    storageBucket: "burgershotorders.appspot.com",
+    messagingSenderId: "244133569976",
+    appId: "1:244133569976:web:0dcca3439958188439db4d",
+    measurementId: "G-2X69N31D9Q"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-    const MAX_CIRCLES = 5;
+  const MAX_CIRCLES = 5;
 
-    function capitalizeName(name) {
-      return name.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ');
+  function capitalizeName(name) {
+    return name
+      .split(" ")
+      .map(word => word.charAt(0).toUpperCase() + word.slice(1))
+      .join(" ");
+  }
+
+  function renderLoyalty(visitCounts) {
+    const container = document.getElementById("loyaltyList");
+    container.innerHTML = "";
+
+    const customers = Object.entries(visitCounts).sort((a, b) => b[1] - a[1]);
+
+    if (customers.length === 0) {
+      container.innerHTML = "<p>No customer data found.</p>";
+      return;
     }
 
-    async function fetchCustomerVisits() {
-      const ordersCol = collection(db, "orders");
-      const ordersSnapshot = await getDocs(ordersCol);
+    customers.forEach(([name, visits]) => {
+      const modVisits = visits % MAX_CIRCLES === 0 ? MAX_CIRCLES : visits % MAX_CIRCLES;
 
-      const visitCounts = {};
-
-      ordersSnapshot.forEach(doc => {
-        const data = doc.data();
-        const customer = data.customer?.toLowerCase()?.trim();
-        if (customer) {
-          visitCounts[customer] = (visitCounts[customer] || 0) + 1;
-        }
-      });
-
-      return visitCounts;
-    }
-
-    function renderLoyalty(visitCounts) {
-      const container = document.getElementById("loyaltyList");
-      container.innerHTML = '';
-
-      const customers = Object.entries(visitCounts).sort((a, b) => b[1] - a[1]);
-
-      if (customers.length === 0) {
-        container.innerHTML = "<p>No customer data found.</p>";
-        return;
+      let circlesHTML = "";
+      for (let i = 1; i <= MAX_CIRCLES; i++) {
+        circlesHTML += `<div class="circle${i <= modVisits ? "" : " empty"}"></div>`;
       }
 
-      customers.forEach(([name, visits]) => {
-        const modVisits = visits % MAX_CIRCLES === 0 ? MAX_CIRCLES : visits % MAX_CIRCLES;
+      const card = document.createElement("div");
+      card.className = "customer-card";
+      card.innerHTML = `
+        <div class="customer-name">${capitalizeName(name)}</div>
+        <div class="circles">${circlesHTML}</div>
+        <div class="total-visits">Total Visits: ${visits}</div>
+      `;
+      container.appendChild(card);
+    });
+  }
 
-        let circlesHTML = '';
-        for (let i = 1; i <= MAX_CIRCLES; i++) {
-          circlesHTML += `<div class="circle${i <= modVisits ? '' : ' empty'}"></div>`;
-        }
+  // ✅ Live listener: updates instantly on add/delete/change
+  const ordersCol = collection(db, "orders");
+  onSnapshot(ordersCol, (snapshot) => {
+    const visitCounts = {};
 
-        const card = document.createElement('div');
-        card.className = 'customer-card';
-        card.innerHTML = `
-          <div class="customer-name">${capitalizeName(name)}</div>
-          <div class="circles">${circlesHTML}</div>
-          <div class="total-visits">Total Visits: ${visits}</div>
-        `;
-        container.appendChild(card);
-      });
-    }
-
-    async function main() {
-      try {
-        const visitCounts = await fetchCustomerVisits();
-        renderLoyalty(visitCounts);
-      } catch (error) {
-        console.error("Error fetching customer visits:", error);
-        document.getElementById("loyaltyList").innerHTML = "<p>Error loading customer data.</p>";
+    snapshot.forEach((doc) => {
+      const data = doc.data();
+      const customer = data.customer?.toLowerCase()?.trim();
+      if (customer) {
+        visitCounts[customer] = (visitCounts[customer] || 0) + 1;
       }
-    }
+    });
 
-    main();
-  </script>
+    renderLoyalty(visitCounts);
+  });
+</script>
+
 </body>
 </html>
